# gia

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  alembic.ini  convo-script.md  demo-script.md  docker-compose.prod.yml  docker-compose.yml  features.md  main.py  notes.md  pyproject.toml  skills-lock.json
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_profile_display_name.py  0003_drop_audio_features.py
backend/app/: config.py  dependencies.py  interfaces.py  main.py
backend/app/agents/: acknowledgment.py  artist.py  curator_crew.py  dj.py  general.py  hybrid_router.py  memory.py  mood.py  planner.py  router.py  router_local.py  router_prewarm.py  synthesis.py
backend/app/api/: artist.py  auth.py  chat.py  dj.py  health.py  memory.py  onboarding.py  playlist.py  voice.py  voice_realtime.py  voice_stream.py
backend/app/data/: acknowledgements.json
backend/app/db/: models.py  session.py  weaviate_init.py
backend/app/memory/: __init__.py  cache.py  consolidation.py  decay.py  embeddings.py  extractor.py  fusion.py  name_capture.py  profiler.py  reranker.py  retrieval.py  session_history.py  store.py
backend/app/mood/: classifier.py  inference.py  ingest.py  labeler.py  proactive.py
backend/app/observability/: langfuse.py  logging.py
backend/app/persona/: prompt.py
backend/app/prompts/: __init__.py  registry.py  schema.py
backend/app/prompts/templates/agents/: artist.yaml  dj.yaml  general.yaml  hybrid_router.yaml  memory.yaml  mood.yaml  profiler.yaml  router.yaml  synthesis.yaml
backend/app/prompts/templates/persona/: gia.yaml
backend/app/providers/: anthropic_client.py  llm.py  openai_client.py  realtime.py  stt.py  stt_stream.py  tts.py
backend/app/schemas/: __init__.py  artist.py  auth.py  chat.py  dj.py  health.py  memory.py  playlist.py  router.py  voice.py
backend/app/tools/: brave.py  crossfade.py  resilience.py  spotify.py  spotify_parse.py  spotify_web.py  weather.py
backend/app/voice/: adapter.py  streaming.py
backend/worker/: celery_app.py
backend/worker/tasks/: memory_consolidation.py  memory_extraction.py  mood_inference.py  proactive_check.py  session_flush.py
docs/: architecture.md  benchmarks.md  design.md  latency.md  memory.md
frontend/: index.html
frontend/nextjs/: .env.example  .gitignore  README.md  package-lock.json  package.json  tailwind.config.ts
frontend/nextjs/app/: globals.css  layout.tsx  page.tsx
frontend/nextjs/components/: GiaVoiceCore.tsx  Icons.tsx  MagneticButton.tsx  ThemeToggle.tsx  TypingText.tsx  VoiceScreen.tsx  VoiceWaves.tsx
frontend/nextjs/components/landing/: Landing.tsx  Reveal.tsx
frontend/nextjs/lib/: api.ts  audio.ts  earcon.ts  identity.ts  pcm.ts  realtimePlayer.ts  realtimeSession.ts  sttStream.ts  theme.ts  useVoiceSession.ts
frontend/nextjs/public/: pcm-worklet.js
ml/router/: .gitignore  README.md  eval_report.txt  extract_dataset.py  generate_synthetic.py  heads.joblib  labelmaps.json  train.py
patches/: README.md  spotify-mcp-server-getTopArtists.patch  spotify-mcp-server.patch
scripts/: demo_chat.py  demo_curator_crew.py  seed_user.py  test_oauth_callback.py
tests/: conftest.py  test_acknowledgment.py  test_artist_agent.py  test_artist_api.py  test_auth.py  test_brave.py  test_chat_api.py  test_classifier.py  test_config.py  test_consolidation.py  test_crossfade.py  test_db_models.py  test_decay.py  test_dependencies.py  test_dj_agent.py  test_dj_api.py  test_embeddings.py  test_extractor.py  test_fusion.py  test_general_agent.py  test_health.py  test_health_internals.py  test_hybrid_router.py  test_hybrid_store.py  test_langfuse.py  test_logging.py  test_memory_agent.py  test_memory_api.py  test_memory_store.py  test_mood_agent.py  test_mood_inference.py  test_mood_ingest.py  test_mood_labeler.py  test_name_capture.py  test_planner.py  test_proactive.py  test_profiler.py  test_prompt_registry.py  test_providers.py  test_realtime.py  (+18 more)
