[project]
name = "vexis"
version = "0.1.0"
description = "Gia — Voice Music Companion"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "aiosqlite>=0.20.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "weaviate-client>=4.10.0",
    "redis[asyncio]>=5.2.0",
    "celery[redis]>=5.4.0",
    "crewai>=0.80.0",
    "anthropic>=0.43.0",
    "openai>=1.60.0",
    "structlog>=24.4.0",
    "langfuse>=2.50.0",
    "httpx>=0.28.0",
    "python-multipart>=0.0.20",
    "python-dotenv>=1.0.0",
    "tenacity>=9.0.0",
    "numpy>=2.0.0",
    "jinja2>=3.1.0",
    "pyyaml>=6.0.0",
]

[dependency-groups]
dev = [
    "mypy>=1.13.0",
    "pre-commit>=4.0.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
    "sentence-transformers>=3.0.0",
    "aiosqlite>=0.20.0",
    "httpx>=0.28.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
addopts = "--cov=backend --cov-report=term-missing --cov-fail-under=85"

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "C4", "SIM"]
ignore = ["E501"]
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = false
warn_unused_ignores = true
warn_redundant_casts = true
strict_optional = true
check_untyped_defs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "celery.*",
    "kombu.*",
    "weaviate.*",
    "faster_whisper.*",
    "sentence_transformers.*",
    "yaml",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
check_untyped_defs = true
